2002-04-16  Nick Clifton  <nickc@cambridge.redhat.com>

	* rcparse.y: Set MEMFLAG_DISCARDABLE by default.

2002-04-15  Nick Clifton  <nickc@cambridge.redhat.com>

	* resrc.c (write_rc_dialog): If charset is non-default value
	display all of the DIALOGEX parameters.

2002-04-15  Eric Kohl <ekohl@rz-online.de>

	* rcparse.y: Allow two to five parameter in FONT statement of 
	DIALOGEX resources.
	* resbin.c (bin_to_res_dialog): Fixed read/write code for dialogex
	resource data.
        (res_to_bin_dialog): Likewise.
	* windres.h: Added misssing charset variable to dialog_ex
	structure.

2002-04-10  Nick Clifton  <nickc@cambridge.redhat.com>

	* rcparse.y: Set MEMFLAG_PURE by default.

2002-04-09  Bernd Herd <info@herdsoft.com>

	* rcparse.y: CLASS definitions in DIALOG resources 
	are quoted.
	Fix typo in BEDIT warning.
	Don't add default dialog style when explicit style specified.
	Add WS_CAPTION dialog style if CAPTION is specified.

	* rclex.l (handle_quotes): "\xhex" encoding in strings corrected.
	(handle_quotes) "\a" escape (used for right justified key
	definitions in menus) is encodes as binary 8.

	* resrc.c (write_rc_dialog): Print style even if it is 0.
	(write_rc_directory): Fix overlooked sublang shift bug.
	(bin_to_res_dialog): Don't print empty dialog caption.

	* resbin.c (bin_to_res_dialog): Use signature to identify
	DIALOGEX.

	* windres.c (main): Set default LANGUAGE to english/us.

2002-04-09  Gunnar Degnbol <degnbol@danbbs.dk>

	* resrc.c: print CLASS names in quotes

2002-04-09  J"orn Rennecke <joern.rennecke@superh.com>

	* MAINTAINERS: Update my email address.

2002-04-04  Alan Modra  <amodra@bigpond.net.au>

	* dep-in.sed: Cope with absolute paths.
	* Makefile.am (dep.sed): Subst TOPDIR.
	Run "make dep-am".
	* Makefile.in: Regenerate.

2002-03-27  Peter Targett  <peter.targett@arc.com>

	* MAINTAINERS: Update my email address.

2002-03-21  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerate.